fixed navbar title icon alignment

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -611,6 +611,11 @@ textarea, input[type="text"] {
 #feed-badge {
   margin-left:3px;
 }
+#title-icon, #title {
+  display: inline-block;
+  vertical-align: middle;
+  font-size:45px;
+}
 
 @media (min-width: 992px) {
   .map-wrapper {
